-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: None
-
Component/s: core-libs
-
Environment:
Fedora 38 x86_64, clang-16.0.6-3.fc38.x86_64
-
b20
-
x86_64
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8337591 | 21.0.5 | Varada M | P4 | Resolved | Fixed | b02 |
--with-toolchain-type=clang fails the compilation for me with clang-16.0.6-3.fc38.x86_64
While the warnings can be disabled I find better to just fix them. The GTK prototypes in JDK reported by clang are either missing or wrong.
While the warnings can be disabled I find better to just fix them. The GTK prototypes in JDK reported by clang are either missing or wrong.
- backported by
-
JDK-8337591 Fix compilation with clang-16
-
- Resolved
-
- duplicates
-
JDK-8319738 Fix building with clang on Linux
-
- Closed
-
- links to
-
Commit
openjdk/jdk/e4329a82
-
Commit(master)
openjdk/jdk21u-dev/30801fbe
-
Review
openjdk/jdk/16092
-
Review(master)
openjdk/jdk21u-dev/874
(1 links to)