8317696: Fix compilation with clang-16