src/java.desktop/unix/native/common/awt/awt_GraphicsEnv.h
@@ -50,7 +50,7 @@
 #define MITSHM_PERM_COMMON (0666)
 #define MITSHM_PERM_OWNER  (0600)
 
-extern int XShmQueryExtension();
+extern int XShmQueryExtension(Display* dpy);
 
 void TryInitMITShm(JNIEnv *env, jint *shmExt, jint *shmPixmaps);
 void resetXShmAttachFailed();
