src/java.desktop/unix/native/libawt_xawt/awt/gtk2_interface.c
@@ -215,7 +215,7 @@ static GtkWidget* (*fp_gtk_label_new)(const gchar* str);
 static GtkWidget* (*fp_gtk_menu_new)();
 static GtkWidget* (*fp_gtk_menu_bar_new)();
 static GtkWidget* (*fp_gtk_menu_item_new)();
-static GtkWidget* (*fp_gtk_notebook_new)();
+static GtkWidget* (*fp_gtk_notebook_new)(void);
 static GtkWidget* (*fp_gtk_progress_bar_new)();
 static GtkWidget* (*fp_gtk_progress_bar_set_orientation)(
         GtkProgressBar *pbar,
@@ -227,8 +227,8 @@ static GtkWidget* (*fp_gtk_scrolled_window_new)(GtkAdjustment *hadjustment,
 static GtkWidget* (*fp_gtk_separator_menu_item_new)();
 static GtkWidget* (*fp_gtk_separator_tool_item_new)();
 static GtkWidget* (*fp_gtk_text_view_new)();
-static GtkWidget* (*fp_gtk_toggle_button_new)();
-static GtkWidget* (*fp_gtk_toolbar_new)();
+static GtkWidget* (*fp_gtk_toggle_button_new)(void);
+static GtkWidget* (*fp_gtk_toolbar_new)(void);
 static GtkWidget* (*fp_gtk_tree_view_new)();
 static GtkWidget* (*fp_gtk_viewport_new)(GtkAdjustment *hadjustment,
         GtkAdjustment *vadjustment);
@@ -1465,7 +1465,7 @@ static GtkWidget *gtk2_get_widget(WidgetType widget_type)
             if (init_result = (NULL == gtk2_widgets[_GTK_NOTEBOOK_TYPE]))
             {
                 gtk2_widgets[_GTK_NOTEBOOK_TYPE] =
-                    (*fp_gtk_notebook_new)(NULL);
+                    (*fp_gtk_notebook_new)();
             }
             result = gtk2_widgets[_GTK_NOTEBOOK_TYPE];
             break;
@@ -1473,7 +1473,7 @@ static GtkWidget *gtk2_get_widget(WidgetType widget_type)
             if (init_result = (NULL == gtk2_widgets[_GTK_TOGGLE_BUTTON_TYPE]))
             {
                 gtk2_widgets[_GTK_TOGGLE_BUTTON_TYPE] =
-                    (*fp_gtk_toggle_button_new)(NULL);
+                    (*fp_gtk_toggle_button_new)();
             }
             result = gtk2_widgets[_GTK_TOGGLE_BUTTON_TYPE];
             break;
@@ -1482,7 +1482,7 @@ static GtkWidget *gtk2_get_widget(WidgetType widget_type)
             if (init_result = (NULL == gtk2_widgets[_GTK_TOOLBAR_TYPE]))
             {
                 gtk2_widgets[_GTK_TOOLBAR_TYPE] =
-                    (*fp_gtk_toolbar_new)(NULL);
+                    (*fp_gtk_toolbar_new)();
             }
             result = gtk2_widgets[_GTK_TOOLBAR_TYPE];
             break;
